# image_slicer

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  .python-version  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  contributing.html  genindex.html  image_slicer.bin.html  image_slicer.html  index.html  installation.html  mkdocs.yml  modules.html  objects.inv  params.json  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test_image_slicer.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-docs.yml  build-master.yml  publish.yml  test-and-lint.yml
_modules/: image_slicer.html  index.html
_modules/image_slicer/: helpers.html  main.html
docs/: Makefile  conf.py  examples.rst  functions.rst  image_slicer.bin.rst  image_slicer.rst  index.md  index.rst  installation.rst  make.bat  modules.rst
docs/explanation/: how-slicing-works.md
docs/how-to-guides/: saving-tiles-to-a-different-directory.md  slice-by-number-of-tiles.md  slice-by-tile-size.md
docs/reference/: api.md  cli.md
docs/tutorials/: slicing-your-first-image.md
image_slicer/: .gitignore  __init__.py  helpers.py  main.py
image_slicer/test/: test_image_slicer.py
image_slicer/tests/: __init__.py  basic_tests.py  test_module.py
src/image_slicer/: __init__.py  cli.py  join_cli.py  slicer.py
stubs/: pyvips.pyi
tests/: test_cli.py  test_slicer.py
