[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image-slicer"
version = "3.0.1"
description = "A high-performance Python library to slice images into tiles."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Sam Dobson", email = "1309834+samdobson@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pyvips[binary]",
]

[project.urls]
Homepage = "https://github.com/samdobson/image_slicer"
Repository = "https://github.com/samdobson/image_slicer"

[project.scripts]
imslice = "image_slicer.cli:main"

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
  "pytest-cov",
  "coveralls",
  "mkdocs",
  "mkdocs-material",
  "Pillow",
  "tox",
  "pyre-check",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "A", "C4", "T20", "I"]

[tool.ruff.lint.per-file-ignores]
"benchmark.py" = ["T201", "A001"]
